[tool.poetry]
name = "weather-forecast"
version = "0.1.0"
description = ""
authors = ["SteMat <Stefan.Matei@softwire.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
statsmodels = "^0.14.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
